# lib/db/src/schema/index.ts
@@ -9,4 +9,5 @@ export * from "./messages";
 export * from "./chat";
 export * from "./pages";
 export * from "./password_resets";
+export * from "./settings";
 
